# eventai-platform

./: .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOY.md  GEMINI.md  LICENSE  README.md  developer-manifest.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  test_all_workflows.py  test_guest_flow.py  test_workflows.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_projects_clustering.py  003_business_profiles.py  003_expert_assignment.py  003a_expert_assignment.py  003b_guest_profiling.py  004_dd_reminders.py  004_guest_profiling.py  005_participation_requests.py  006_dd_reminders.py  007_notification_skipped_status.py  008_expert_briefing.py  009_qa_suggestion.py  010_contact_request.py  011_placeholder.py  012_feedback_comment.py  013_expert_score.py  014_followup_package.py  (+27 more)
backend/app/: config.py  database.py  lifespan.py  main.py  scheduler.py
backend/tests/: conftest.py  test_admin_api.py  test_admin_dashboard.py  test_admin_events.py  test_alembic_heads.py  test_alembic_upgrade.py  test_audit_service.py  test_auth.py  test_bot_messenger.py  test_clustering.py  test_conversations.py  test_dedup_service.py  test_dependency_imports.py  test_expert_delete.py  test_guest_export_route.py  test_min_experts.py  test_organizer_service.py  test_pre_slot_reminder.py  test_project_crud.py  test_role_mapping.py  test_schedule_builder.py  test_send_retry.py  test_smoke_imports.py  test_support_chat.py  test_tag_generation.py
docs/: jtbd.md  (+11 more)
(+760 files in other folders)
